# convo

./: .editorconfig  .gitconfig  README.md  ToDo
ai/: .gitignore  mise.toml  pyproject.toml
ai/.mise_bin/: pip3
backend/: .gitignore  README.md  pom.xml
backend/src/main/kotlin/com/convo/backend/: BackendApplication.kt
backend/src/test/kotlin/com/convo/backend/: BackendApplicationTests.kt
ui/: .gitignore  .prettierrc  eslint.config.mjs  mise.toml  package-lock.json  package.json
